parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTEBOOL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> program ID auxprograma PYC varsaux paux2 mainfunction end cuadEnd PYC
Rule 2     cuadEnd -> <empty>
Rule 3     programa -> program auxprograma ID PYC empty mainfunction end PYC
Rule 4     auxprograma -> <empty>
Rule 5     varsaux -> vars varsaux
Rule 6     varsaux -> empty
Rule 7     paux2 -> function paux2
Rule 8     paux2 -> empty
Rule 9     vars -> var type vaux PYC
Rule 10    vars -> empty
Rule 11    vaux -> ID agregaVar nextvar
Rule 12    vaux -> ID CORIZQ CTEINT CORDER agregaVar nextvar
Rule 13    vaux -> ID CORIZQ CTEINT COMA CTEINT CORDER agregaVar nextvar
Rule 14    nextvar -> COMA vaux
Rule 15    nextvar -> empty
Rule 16    agregaVar -> <empty>
Rule 17    guardarTipoVar -> <empty>
Rule 18    guardarTipoFunc -> <empty>
Rule 19    mainfunction -> func main agregaFunc PARIZQ PARDER varsaux bloque
Rule 20    mainfunction -> func main agregaFunc PARIZQ PARDER bloque
Rule 21    agregaFunc -> <empty>
Rule 22    bloque -> LLAVEIZQ bloqueaux LLAVEDER
Rule 23    bloque -> LLAVEIZQ empty LLAVEDER
Rule 24    bloqueaux -> estatuto bloqueaux
Rule 25    bloqueaux -> estatuto
Rule 26    type -> int guardarTipoVar
Rule 27    type -> float guardarTipoVar
Rule 28    type -> string guardarTipoVar
Rule 29    type -> bool guardarTipoVar
Rule 30    function -> ftype func ID agregaFunc PARIZQ funcaux PARDER varsaux bloque
Rule 31    function -> ftype func ID agregaFunc PARIZQ empty PARDER varsaux bloque
Rule 32    ftype -> int guardarTipoFunc
Rule 33    ftype -> float guardarTipoFunc
Rule 34    ftype -> string guardarTipoFunc
Rule 35    ftype -> bool guardarTipoFunc
Rule 36    ftype -> void guardarTipoFunc
Rule 37    funcaux -> type ID agregaVar masParam
Rule 38    funcaux -> type ID CORIZQ CTEINT CORDER agregaVar masParam
Rule 39    funcaux -> type ID CORIZQ CTEINT COMA CTEINT CORDER agregaVar masParam
Rule 40    masParam -> funcaux
Rule 41    masParam -> empty
Rule 42    estatuto -> asignacion
Rule 43    estatuto -> escritura
Rule 44    estatuto -> llamada
Rule 45    estatuto -> condicion
Rule 46    estatuto -> whileloop
Rule 47    estatuto -> forloop
Rule 48    estatuto -> lectura
Rule 49    asignacion -> ID checkID asignaux ASIGNA expresion cuadAsignacion PYC
Rule 50    asignacion -> ID checkID asignaux ASIGNA llamada_esp PYC
Rule 51    asignacion -> ID checkID asignaux ASIGNA CTESTRING cuadAsignacion PYC
Rule 52    checkID -> <empty>
Rule 53    cuadAsignacion -> <empty>
Rule 54    asignaux -> CORIZQ expresion CORDER
Rule 55    asignaux -> CORIZQ expresion COMA expresion CORDER
Rule 56    asignaux -> empty
Rule 57    escritura -> write PARIZQ escaux PARDER PYC
Rule 58    escaux -> expresion cuadEsc nextexp
Rule 59    escaux -> CTESTRING cuadEsc nextexp
Rule 60    escaux -> llamada_esp nextexp
Rule 61    cuadEsc -> <empty>
Rule 62    nextexp -> COMA escaux
Rule 63    nextexp -> empty
Rule 64    llamada -> ID PARIZQ expresion llamaux PARDER
Rule 65    llamada -> ID PARIZQ llamada_esp llamaux PARDER
Rule 66    llamada -> ID PARIZQ PARDER
Rule 67    llamaux -> expresion nextparametro
Rule 68    llamaux -> llamada_esp nextparametro
Rule 69    nextparametro -> COMA llamaux
Rule 70    nextparametro -> empty
Rule 71    condicion -> if PARIZQ expresion PARDER cuadGotof bloque condicionAux cuadFinIf
Rule 72    condicionAux -> else cuadGoto bloque
Rule 73    condicionAux -> empty
Rule 74    whileloop -> while migaja PARIZQ expresion PARDER cuadGotof bloque cuadFinWhile
Rule 75    migaja -> <empty>
Rule 76    cuadFinWhile -> <empty>
Rule 77    forloop -> for PARIZQ expresion checkExpFor DOSPUNTOS expresion checkExpFor PARDER gotoFor bloque returnFor
Rule 78    checkExpFor -> <empty>
Rule 79    gotoFor -> <empty>
Rule 80    returnFor -> <empty>
Rule 81    lectura -> read PARIZQ ID checkID PARDER PYC
Rule 82    expresion -> andExpresion
Rule 83    expresion -> andExpresion OR pushOper andExpresion
Rule 84    andExpresion -> relopExpresion
Rule 85    andExpresion -> relopExpresion AND pushOper relopExpresion
Rule 86    relopExpresion -> aritExpresion cuadArit
Rule 87    relopExpresion -> aritExpresion cuadArit relopAux aritExpresion cuadArit
Rule 88    relopAux -> MAYORQUE pushOper
Rule 89    relopAux -> MENORQUE pushOper
Rule 90    relopAux -> MAYORIGUAL pushOper
Rule 91    relopAux -> MENORIGUAL pushOper
Rule 92    relopAux -> EQUALS pushOper
Rule 93    relopAux -> DIFERENTE pushOper
Rule 94    aritExpresion -> term cuadTerm
Rule 95    aritExpresion -> term cuadTerm aritAux term cuadTerm
Rule 96    aritAux -> MAS pushOper
Rule 97    aritAux -> MENOS pushOper
Rule 98    term -> factor
Rule 99    term -> factor cuadFactor termAux factor cuadFactor
Rule 100   termAux -> MULT pushOper
Rule 101   termAux -> DIV pushOper
Rule 102   factor -> PARIZQ expresion PARDER
Rule 103   factor -> CTEINT pushOT
Rule 104   factor -> CTEFLOAT pushOT
Rule 105   factor -> true pushOT
Rule 106   factor -> false pushOT
Rule 107   factor -> ID checkID pushOT
Rule 108   factor -> llamada_esp pushOT
Rule 109   llamada_esp -> ID PUNTO especiales PARIZQ PARDER
Rule 110   especiales -> length
Rule 111   especiales -> max
Rule 112   especiales -> min
Rule 113   especiales -> avg
Rule 114   especiales -> median
Rule 115   especiales -> mode
Rule 116   especiales -> variance
Rule 117   especiales -> stdev
Rule 118   pushOper -> <empty>
Rule 119   pushOT -> <empty>
Rule 120   cuadTerm -> <empty>
Rule 121   cuadFactor -> <empty>
Rule 122   cuadArit -> <empty>
Rule 123   cuadGotof -> <empty>
Rule 124   cuadFinIf -> <empty>
Rule 125   cuadGoto -> <empty>
Rule 126   empty -> <empty>

Terminals, with rules where they appear

AND                  : 85
ASIGNA               : 49 50 51
COMA                 : 13 14 39 55 62 69
CORDER               : 12 13 38 39 54 55
CORIZQ               : 12 13 38 39 54 55
CTEBOOL              : 
CTEFLOAT             : 104
CTEINT               : 12 13 13 38 39 39 103
CTESTRING            : 51 59
DIFERENTE            : 93
DIV                  : 101
DOSPUNTOS            : 77
EQUALS               : 92
ID                   : 1 3 11 12 13 30 31 37 38 39 49 50 51 64 65 66 81 107 109
LLAVEDER             : 22 23
LLAVEIZQ             : 22 23
MAS                  : 96
MAYORIGUAL           : 90
MAYORQUE             : 88
MENORIGUAL           : 91
MENORQUE             : 89
MENOS                : 97
MULT                 : 100
OR                   : 83
PARDER               : 19 20 30 31 57 64 65 66 71 74 77 81 102 109
PARIZQ               : 19 20 30 31 57 64 65 66 71 74 77 81 102 109
PUNTO                : 109
PYC                  : 1 1 3 3 9 49 50 51 57 81
avg                  : 113
bool                 : 29 35
else                 : 72
end                  : 1 3
error                : 
false                : 106
float                : 27 33
for                  : 77
func                 : 19 20 30 31
if                   : 71
int                  : 26 32
length               : 110
main                 : 19 20
max                  : 111
median               : 114
min                  : 112
mode                 : 115
program              : 1 3
read                 : 81
stdev                : 117
string               : 28 34
true                 : 105
var                  : 9
variance             : 116
void                 : 36
while                : 74
write                : 57

Nonterminals, with rules where they appear

agregaFunc           : 19 20 30 31
agregaVar            : 11 12 13 37 38 39
andExpresion         : 82 83 83
aritAux              : 95
aritExpresion        : 86 87 87
asignacion           : 42
asignaux             : 49 50 51
auxprograma          : 1 3
bloque               : 19 20 30 31 71 72 74 77
bloqueaux            : 22 24
checkExpFor          : 77 77
checkID              : 49 50 51 81 107
condicion            : 45
condicionAux         : 71
cuadArit             : 86 87 87
cuadAsignacion       : 49 51
cuadEnd              : 1
cuadEsc              : 58 59
cuadFactor           : 99 99
cuadFinIf            : 71
cuadFinWhile         : 74
cuadGoto             : 72
cuadGotof            : 71 74
cuadTerm             : 94 95 95
empty                : 3 6 8 10 15 23 31 41 56 63 70 73
escaux               : 57 62
escritura            : 43
especiales           : 109
estatuto             : 24 25
expresion            : 49 54 55 55 58 64 67 71 74 77 77 102
factor               : 98 99 99
forloop              : 47
ftype                : 30 31
funcaux              : 30 40
function             : 7
gotoFor              : 77
guardarTipoFunc      : 32 33 34 35 36
guardarTipoVar       : 26 27 28 29
lectura              : 48
llamada              : 44
llamada_esp          : 50 60 65 68 108
llamaux              : 64 65 69
mainfunction         : 1 3
masParam             : 37 38 39
migaja               : 74
nextexp              : 58 59 60
nextparametro        : 67 68
nextvar              : 11 12 13
paux2                : 1 7
programa             : 0
pushOT               : 103 104 105 106 107 108
pushOper             : 83 85 88 89 90 91 92 93 96 97 100 101
relopAux             : 87
relopExpresion       : 84 85 85
returnFor            : 77
term                 : 94 95 95
termAux              : 99
type                 : 9 37 38 39
vars                 : 5
varsaux              : 1 5 19 30 31
vaux                 : 9 14
whileloop            : 46

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . program ID auxprograma PYC varsaux paux2 mainfunction end cuadEnd PYC
    (3) programa -> . program auxprograma ID PYC empty mainfunction end PYC

    program         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> program . ID auxprograma PYC varsaux paux2 mainfunction end cuadEnd PYC
    (3) programa -> program . auxprograma ID PYC empty mainfunction end PYC
    (4) auxprograma -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 3

  ! ID              [ reduce using rule 4 (auxprograma -> .) ]

    auxprograma                    shift and go to state 4

state 3

    (1) programa -> program ID . auxprograma PYC varsaux paux2 mainfunction end cuadEnd PYC
    (4) auxprograma -> .

    PYC             reduce using rule 4 (auxprograma -> .)

    auxprograma                    shift and go to state 5

state 4

    (3) programa -> program auxprograma . ID PYC empty mainfunction end PYC

    ID              shift and go to state 6


state 5

    (1) programa -> program ID auxprograma . PYC varsaux paux2 mainfunction end cuadEnd PYC

    PYC             shift and go to state 7


state 6

    (3) programa -> program auxprograma ID . PYC empty mainfunction end PYC

    PYC             shift and go to state 8


state 7

    (1) programa -> program ID auxprograma PYC . varsaux paux2 mainfunction end cuadEnd PYC
    (5) varsaux -> . vars varsaux
    (6) varsaux -> . empty
    (9) vars -> . var type vaux PYC
    (10) vars -> . empty
    (126) empty -> .

  ! shift/reduce conflict for var resolved as shift
    var             shift and go to state 12
    int             reduce using rule 126 (empty -> .)
    float           reduce using rule 126 (empty -> .)
    string          reduce using rule 126 (empty -> .)
    bool            reduce using rule 126 (empty -> .)
    void            reduce using rule 126 (empty -> .)
    func            reduce using rule 126 (empty -> .)

  ! var             [ reduce using rule 126 (empty -> .) ]

    varsaux                        shift and go to state 9
    vars                           shift and go to state 10
    empty                          shift and go to state 11

state 8

    (3) programa -> program auxprograma ID PYC . empty mainfunction end PYC
    (126) empty -> .

    func            reduce using rule 126 (empty -> .)

    empty                          shift and go to state 13

state 9

    (1) programa -> program ID auxprograma PYC varsaux . paux2 mainfunction end cuadEnd PYC
    (7) paux2 -> . function paux2
    (8) paux2 -> . empty
    (30) function -> . ftype func ID agregaFunc PARIZQ funcaux PARDER varsaux bloque
    (31) function -> . ftype func ID agregaFunc PARIZQ empty PARDER varsaux bloque
    (126) empty -> .
    (32) ftype -> . int guardarTipoFunc
    (33) ftype -> . float guardarTipoFunc
    (34) ftype -> . string guardarTipoFunc
    (35) ftype -> . bool guardarTipoFunc
    (36) ftype -> . void guardarTipoFunc

    func            reduce using rule 126 (empty -> .)
    int             shift and go to state 18
    float           shift and go to state 19
    string          shift and go to state 20
    bool            shift and go to state 21
    void            shift and go to state 22

    paux2                          shift and go to state 14
    function                       shift and go to state 15
    empty                          shift and go to state 16
    ftype                          shift and go to state 17

state 10

    (5) varsaux -> vars . varsaux
    (5) varsaux -> . vars varsaux
    (6) varsaux -> . empty
    (9) vars -> . var type vaux PYC
    (10) vars -> . empty
    (126) empty -> .

  ! shift/reduce conflict for var resolved as shift
    var             shift and go to state 12
    int             reduce using rule 126 (empty -> .)
    float           reduce using rule 126 (empty -> .)
    string          reduce using rule 126 (empty -> .)
    bool            reduce using rule 126 (empty -> .)
    void            reduce using rule 126 (empty -> .)
    func            reduce using rule 126 (empty -> .)
    LLAVEIZQ        reduce using rule 126 (empty -> .)

  ! var             [ reduce using rule 126 (empty -> .) ]

    vars                           shift and go to state 10
    varsaux                        shift and go to state 23
    empty                          shift and go to state 11

state 11

    (6) varsaux -> empty .
    (10) vars -> empty .

  ! reduce/reduce conflict for int resolved using rule 6 (varsaux -> empty .)
  ! reduce/reduce conflict for float resolved using rule 6 (varsaux -> empty .)
  ! reduce/reduce conflict for string resolved using rule 6 (varsaux -> empty .)
  ! reduce/reduce conflict for bool resolved using rule 6 (varsaux -> empty .)
  ! reduce/reduce conflict for void resolved using rule 6 (varsaux -> empty .)
  ! reduce/reduce conflict for func resolved using rule 6 (varsaux -> empty .)
  ! reduce/reduce conflict for LLAVEIZQ resolved using rule 6 (varsaux -> empty .)
    int             reduce using rule 6 (varsaux -> empty .)
    float           reduce using rule 6 (varsaux -> empty .)
    string          reduce using rule 6 (varsaux -> empty .)
    bool            reduce using rule 6 (varsaux -> empty .)
    void            reduce using rule 6 (varsaux -> empty .)
    func            reduce using rule 6 (varsaux -> empty .)
    LLAVEIZQ        reduce using rule 6 (varsaux -> empty .)
    var             reduce using rule 10 (vars -> empty .)

  ! int             [ reduce using rule 10 (vars -> empty .) ]
  ! float           [ reduce using rule 10 (vars -> empty .) ]
  ! string          [ reduce using rule 10 (vars -> empty .) ]
  ! bool            [ reduce using rule 10 (vars -> empty .) ]
  ! void            [ reduce using rule 10 (vars -> empty .) ]
  ! func            [ reduce using rule 10 (vars -> empty .) ]
  ! LLAVEIZQ        [ reduce using rule 10 (vars -> empty .) ]


state 12

    (9) vars -> var . type vaux PYC
    (26) type -> . int guardarTipoVar
    (27) type -> . float guardarTipoVar
    (28) type -> . string guardarTipoVar
    (29) type -> . bool guardarTipoVar

    int             shift and go to state 25
    float           shift and go to state 26
    string          shift and go to state 27
    bool            shift and go to state 28

    type                           shift and go to state 24

state 13

    (3) programa -> program auxprograma ID PYC empty . mainfunction end PYC
    (19) mainfunction -> . func main agregaFunc PARIZQ PARDER varsaux bloque
    (20) mainfunction -> . func main agregaFunc PARIZQ PARDER bloque

    func            shift and go to state 30

    mainfunction                   shift and go to state 29

state 14

    (1) programa -> program ID auxprograma PYC varsaux paux2 . mainfunction end cuadEnd PYC
    (19) mainfunction -> . func main agregaFunc PARIZQ PARDER varsaux bloque
    (20) mainfunction -> . func main agregaFunc PARIZQ PARDER bloque

    func            shift and go to state 30

    mainfunction                   shift and go to state 31

state 15

    (7) paux2 -> function . paux2
    (7) paux2 -> . function paux2
    (8) paux2 -> . empty
    (30) function -> . ftype func ID agregaFunc PARIZQ funcaux PARDER varsaux bloque
    (31) function -> . ftype func ID agregaFunc PARIZQ empty PARDER varsaux bloque
    (126) empty -> .
    (32) ftype -> . int guardarTipoFunc
    (33) ftype -> . float guardarTipoFunc
    (34) ftype -> . string guardarTipoFunc
    (35) ftype -> . bool guardarTipoFunc
    (36) ftype -> . void guardarTipoFunc

    func            reduce using rule 126 (empty -> .)
    int             shift and go to state 18
    float           shift and go to state 19
    string          shift and go to state 20
    bool            shift and go to state 21
    void            shift and go to state 22

    function                       shift and go to state 15
    paux2                          shift and go to state 32
    empty                          shift and go to state 16
    ftype                          shift and go to state 17

state 16

    (8) paux2 -> empty .

    func            reduce using rule 8 (paux2 -> empty .)


state 17

    (30) function -> ftype . func ID agregaFunc PARIZQ funcaux PARDER varsaux bloque
    (31) function -> ftype . func ID agregaFunc PARIZQ empty PARDER varsaux bloque

    func            shift and go to state 33


state 18

    (32) ftype -> int . guardarTipoFunc
    (18) guardarTipoFunc -> .

    func            reduce using rule 18 (guardarTipoFunc -> .)

    guardarTipoFunc                shift and go to state 34

state 19

    (33) ftype -> float . guardarTipoFunc
    (18) guardarTipoFunc -> .

    func            reduce using rule 18 (guardarTipoFunc -> .)

    guardarTipoFunc                shift and go to state 35

state 20

    (34) ftype -> string . guardarTipoFunc
    (18) guardarTipoFunc -> .

    func            reduce using rule 18 (guardarTipoFunc -> .)

    guardarTipoFunc                shift and go to state 36

state 21

    (35) ftype -> bool . guardarTipoFunc
    (18) guardarTipoFunc -> .

    func            reduce using rule 18 (guardarTipoFunc -> .)

    guardarTipoFunc                shift and go to state 37

state 22

    (36) ftype -> void . guardarTipoFunc
    (18) guardarTipoFunc -> .

    func            reduce using rule 18 (guardarTipoFunc -> .)

    guardarTipoFunc                shift and go to state 38

state 23

    (5) varsaux -> vars varsaux .

    int             reduce using rule 5 (varsaux -> vars varsaux .)
    float           reduce using rule 5 (varsaux -> vars varsaux .)
    string          reduce using rule 5 (varsaux -> vars varsaux .)
    bool            reduce using rule 5 (varsaux -> vars varsaux .)
    void            reduce using rule 5 (varsaux -> vars varsaux .)
    func            reduce using rule 5 (varsaux -> vars varsaux .)
    LLAVEIZQ        reduce using rule 5 (varsaux -> vars varsaux .)


state 24

    (9) vars -> var type . vaux PYC
    (11) vaux -> . ID agregaVar nextvar
    (12) vaux -> . ID CORIZQ CTEINT CORDER agregaVar nextvar
    (13) vaux -> . ID CORIZQ CTEINT COMA CTEINT CORDER agregaVar nextvar

    ID              shift and go to state 40

    vaux                           shift and go to state 39

state 25

    (26) type -> int . guardarTipoVar
    (17) guardarTipoVar -> .

    ID              reduce using rule 17 (guardarTipoVar -> .)

    guardarTipoVar                 shift and go to state 41

state 26

    (27) type -> float . guardarTipoVar
    (17) guardarTipoVar -> .

    ID              reduce using rule 17 (guardarTipoVar -> .)

    guardarTipoVar                 shift and go to state 42

state 27

    (28) type -> string . guardarTipoVar
    (17) guardarTipoVar -> .

    ID              reduce using rule 17 (guardarTipoVar -> .)

    guardarTipoVar                 shift and go to state 43

state 28

    (29) type -> bool . guardarTipoVar
    (17) guardarTipoVar -> .

    ID              reduce using rule 17 (guardarTipoVar -> .)

    guardarTipoVar                 shift and go to state 44

state 29

    (3) programa -> program auxprograma ID PYC empty mainfunction . end PYC

    end             shift and go to state 45


state 30

    (19) mainfunction -> func . main agregaFunc PARIZQ PARDER varsaux bloque
    (20) mainfunction -> func . main agregaFunc PARIZQ PARDER bloque

    main            shift and go to state 46


state 31

    (1) programa -> program ID auxprograma PYC varsaux paux2 mainfunction . end cuadEnd PYC

    end             shift and go to state 47


state 32

    (7) paux2 -> function paux2 .

    func            reduce using rule 7 (paux2 -> function paux2 .)


state 33

    (30) function -> ftype func . ID agregaFunc PARIZQ funcaux PARDER varsaux bloque
    (31) function -> ftype func . ID agregaFunc PARIZQ empty PARDER varsaux bloque

    ID              shift and go to state 48


state 34

    (32) ftype -> int guardarTipoFunc .

    func            reduce using rule 32 (ftype -> int guardarTipoFunc .)


state 35

    (33) ftype -> float guardarTipoFunc .

    func            reduce using rule 33 (ftype -> float guardarTipoFunc .)


state 36

    (34) ftype -> string guardarTipoFunc .

    func            reduce using rule 34 (ftype -> string guardarTipoFunc .)


state 37

    (35) ftype -> bool guardarTipoFunc .

    func            reduce using rule 35 (ftype -> bool guardarTipoFunc .)


state 38

    (36) ftype -> void guardarTipoFunc .

    func            reduce using rule 36 (ftype -> void guardarTipoFunc .)


state 39

    (9) vars -> var type vaux . PYC

    PYC             shift and go to state 49


state 40

    (11) vaux -> ID . agregaVar nextvar
    (12) vaux -> ID . CORIZQ CTEINT CORDER agregaVar nextvar
    (13) vaux -> ID . CORIZQ CTEINT COMA CTEINT CORDER agregaVar nextvar
    (16) agregaVar -> .

    CORIZQ          shift and go to state 51
    COMA            reduce using rule 16 (agregaVar -> .)
    PYC             reduce using rule 16 (agregaVar -> .)

    agregaVar                      shift and go to state 50

state 41

    (26) type -> int guardarTipoVar .

    ID              reduce using rule 26 (type -> int guardarTipoVar .)


state 42

    (27) type -> float guardarTipoVar .

    ID              reduce using rule 27 (type -> float guardarTipoVar .)


state 43

    (28) type -> string guardarTipoVar .

    ID              reduce using rule 28 (type -> string guardarTipoVar .)


state 44

    (29) type -> bool guardarTipoVar .

    ID              reduce using rule 29 (type -> bool guardarTipoVar .)


state 45

    (3) programa -> program auxprograma ID PYC empty mainfunction end . PYC

    PYC             shift and go to state 52


state 46

    (19) mainfunction -> func main . agregaFunc PARIZQ PARDER varsaux bloque
    (20) mainfunction -> func main . agregaFunc PARIZQ PARDER bloque
    (21) agregaFunc -> .

    PARIZQ          reduce using rule 21 (agregaFunc -> .)

    agregaFunc                     shift and go to state 53

state 47

    (1) programa -> program ID auxprograma PYC varsaux paux2 mainfunction end . cuadEnd PYC
    (2) cuadEnd -> .

    PYC             reduce using rule 2 (cuadEnd -> .)

    cuadEnd                        shift and go to state 54

state 48

    (30) function -> ftype func ID . agregaFunc PARIZQ funcaux PARDER varsaux bloque
    (31) function -> ftype func ID . agregaFunc PARIZQ empty PARDER varsaux bloque
    (21) agregaFunc -> .

    PARIZQ          reduce using rule 21 (agregaFunc -> .)

    agregaFunc                     shift and go to state 55

state 49

    (9) vars -> var type vaux PYC .

    var             reduce using rule 9 (vars -> var type vaux PYC .)
    int             reduce using rule 9 (vars -> var type vaux PYC .)
    float           reduce using rule 9 (vars -> var type vaux PYC .)
    string          reduce using rule 9 (vars -> var type vaux PYC .)
    bool            reduce using rule 9 (vars -> var type vaux PYC .)
    void            reduce using rule 9 (vars -> var type vaux PYC .)
    func            reduce using rule 9 (vars -> var type vaux PYC .)
    LLAVEIZQ        reduce using rule 9 (vars -> var type vaux PYC .)


state 50

    (11) vaux -> ID agregaVar . nextvar
    (14) nextvar -> . COMA vaux
    (15) nextvar -> . empty
    (126) empty -> .

    COMA            shift and go to state 57
    PYC             reduce using rule 126 (empty -> .)

    nextvar                        shift and go to state 56
    empty                          shift and go to state 58

state 51

    (12) vaux -> ID CORIZQ . CTEINT CORDER agregaVar nextvar
    (13) vaux -> ID CORIZQ . CTEINT COMA CTEINT CORDER agregaVar nextvar

    CTEINT          shift and go to state 59


state 52

    (3) programa -> program auxprograma ID PYC empty mainfunction end PYC .

    $end            reduce using rule 3 (programa -> program auxprograma ID PYC empty mainfunction end PYC .)


state 53

    (19) mainfunction -> func main agregaFunc . PARIZQ PARDER varsaux bloque
    (20) mainfunction -> func main agregaFunc . PARIZQ PARDER bloque

    PARIZQ          shift and go to state 60


state 54

    (1) programa -> program ID auxprograma PYC varsaux paux2 mainfunction end cuadEnd . PYC

    PYC             shift and go to state 61


state 55

    (30) function -> ftype func ID agregaFunc . PARIZQ funcaux PARDER varsaux bloque
    (31) function -> ftype func ID agregaFunc . PARIZQ empty PARDER varsaux bloque

    PARIZQ          shift and go to state 62


state 56

    (11) vaux -> ID agregaVar nextvar .

    PYC             reduce using rule 11 (vaux -> ID agregaVar nextvar .)


state 57

    (14) nextvar -> COMA . vaux
    (11) vaux -> . ID agregaVar nextvar
    (12) vaux -> . ID CORIZQ CTEINT CORDER agregaVar nextvar
    (13) vaux -> . ID CORIZQ CTEINT COMA CTEINT CORDER agregaVar nextvar

    ID              shift and go to state 40

    vaux                           shift and go to state 63

state 58

    (15) nextvar -> empty .

    PYC             reduce using rule 15 (nextvar -> empty .)


state 59

    (12) vaux -> ID CORIZQ CTEINT . CORDER agregaVar nextvar
    (13) vaux -> ID CORIZQ CTEINT . COMA CTEINT CORDER agregaVar nextvar

    CORDER          shift and go to state 64
    COMA            shift and go to state 65


state 60

    (19) mainfunction -> func main agregaFunc PARIZQ . PARDER varsaux bloque
    (20) mainfunction -> func main agregaFunc PARIZQ . PARDER bloque

    PARDER          shift and go to state 66


state 61

    (1) programa -> program ID auxprograma PYC varsaux paux2 mainfunction end cuadEnd PYC .

    $end            reduce using rule 1 (programa -> program ID auxprograma PYC varsaux paux2 mainfunction end cuadEnd PYC .)


state 62

    (30) function -> ftype func ID agregaFunc PARIZQ . funcaux PARDER varsaux bloque
    (31) function -> ftype func ID agregaFunc PARIZQ . empty PARDER varsaux bloque
    (37) funcaux -> . type ID agregaVar masParam
    (38) funcaux -> . type ID CORIZQ CTEINT CORDER agregaVar masParam
    (39) funcaux -> . type ID CORIZQ CTEINT COMA CTEINT CORDER agregaVar masParam
    (126) empty -> .
    (26) type -> . int guardarTipoVar
    (27) type -> . float guardarTipoVar
    (28) type -> . string guardarTipoVar
    (29) type -> . bool guardarTipoVar

    PARDER          reduce using rule 126 (empty -> .)
    int             shift and go to state 25
    float           shift and go to state 26
    string          shift and go to state 27
    bool            shift and go to state 28

    funcaux                        shift and go to state 67
    empty                          shift and go to state 68
    type                           shift and go to state 69

state 63

    (14) nextvar -> COMA vaux .

    PYC             reduce using rule 14 (nextvar -> COMA vaux .)


state 64

    (12) vaux -> ID CORIZQ CTEINT CORDER . agregaVar nextvar
    (16) agregaVar -> .

    COMA            reduce using rule 16 (agregaVar -> .)
    PYC             reduce using rule 16 (agregaVar -> .)

    agregaVar                      shift and go to state 70

state 65

    (13) vaux -> ID CORIZQ CTEINT COMA . CTEINT CORDER agregaVar nextvar

    CTEINT          shift and go to state 71


state 66

    (19) mainfunction -> func main agregaFunc PARIZQ PARDER . varsaux bloque
    (20) mainfunction -> func main agregaFunc PARIZQ PARDER . bloque
    (5) varsaux -> . vars varsaux
    (6) varsaux -> . empty
    (22) bloque -> . LLAVEIZQ bloqueaux LLAVEDER
    (23) bloque -> . LLAVEIZQ empty LLAVEDER
    (9) vars -> . var type vaux PYC
    (10) vars -> . empty
    (126) empty -> .

  ! shift/reduce conflict for LLAVEIZQ resolved as shift
  ! shift/reduce conflict for var resolved as shift
    LLAVEIZQ        shift and go to state 74
    var             shift and go to state 12

  ! LLAVEIZQ        [ reduce using rule 126 (empty -> .) ]
  ! var             [ reduce using rule 126 (empty -> .) ]

    varsaux                        shift and go to state 72
    bloque                         shift and go to state 73
    vars                           shift and go to state 10
    empty                          shift and go to state 11

state 67

    (30) function -> ftype func ID agregaFunc PARIZQ funcaux . PARDER varsaux bloque

    PARDER          shift and go to state 75


state 68

    (31) function -> ftype func ID agregaFunc PARIZQ empty . PARDER varsaux bloque

    PARDER          shift and go to state 76


state 69

    (37) funcaux -> type . ID agregaVar masParam
    (38) funcaux -> type . ID CORIZQ CTEINT CORDER agregaVar masParam
    (39) funcaux -> type . ID CORIZQ CTEINT COMA CTEINT CORDER agregaVar masParam

    ID              shift and go to state 77


state 70

    (12) vaux -> ID CORIZQ CTEINT CORDER agregaVar . nextvar
    (14) nextvar -> . COMA vaux
    (15) nextvar -> . empty
    (126) empty -> .

    COMA            shift and go to state 57
    PYC             reduce using rule 126 (empty -> .)

    nextvar                        shift and go to state 78
    empty                          shift and go to state 58

state 71

    (13) vaux -> ID CORIZQ CTEINT COMA CTEINT . CORDER agregaVar nextvar

    CORDER          shift and go to state 79


state 72

    (19) mainfunction -> func main agregaFunc PARIZQ PARDER varsaux . bloque
    (22) bloque -> . LLAVEIZQ bloqueaux LLAVEDER
    (23) bloque -> . LLAVEIZQ empty LLAVEDER

    LLAVEIZQ        shift and go to state 74

    bloque                         shift and go to state 80

state 73

    (20) mainfunction -> func main agregaFunc PARIZQ PARDER bloque .

    end             reduce using rule 20 (mainfunction -> func main agregaFunc PARIZQ PARDER bloque .)


state 74

    (22) bloque -> LLAVEIZQ . bloqueaux LLAVEDER
    (23) bloque -> LLAVEIZQ . empty LLAVEDER
    (24) bloqueaux -> . estatuto bloqueaux
    (25) bloqueaux -> . estatuto
    (126) empty -> .
    (42) estatuto -> . asignacion
    (43) estatuto -> . escritura
    (44) estatuto -> . llamada
    (45) estatuto -> . condicion
    (46) estatuto -> . whileloop
    (47) estatuto -> . forloop
    (48) estatuto -> . lectura
    (49) asignacion -> . ID checkID asignaux ASIGNA expresion cuadAsignacion PYC
    (50) asignacion -> . ID checkID asignaux ASIGNA llamada_esp PYC
    (51) asignacion -> . ID checkID asignaux ASIGNA CTESTRING cuadAsignacion PYC
    (57) escritura -> . write PARIZQ escaux PARDER PYC
    (64) llamada -> . ID PARIZQ expresion llamaux PARDER
    (65) llamada -> . ID PARIZQ llamada_esp llamaux PARDER
    (66) llamada -> . ID PARIZQ PARDER
    (71) condicion -> . if PARIZQ expresion PARDER cuadGotof bloque condicionAux cuadFinIf
    (74) whileloop -> . while migaja PARIZQ expresion PARDER cuadGotof bloque cuadFinWhile
    (77) forloop -> . for PARIZQ expresion checkExpFor DOSPUNTOS expresion checkExpFor PARDER gotoFor bloque returnFor
    (81) lectura -> . read PARIZQ ID checkID PARDER PYC

    LLAVEDER        reduce using rule 126 (empty -> .)
    ID              shift and go to state 91
    write           shift and go to state 92
    if              shift and go to state 93
    while           shift and go to state 94
    for             shift and go to state 95
    read            shift and go to state 96

    bloqueaux                      shift and go to state 81
    empty                          shift and go to state 82
    estatuto                       shift and go to state 83
    asignacion                     shift and go to state 84
    escritura                      shift and go to state 85
    llamada                        shift and go to state 86
    condicion                      shift and go to state 87
    whileloop                      shift and go to state 88
    forloop                        shift and go to state 89
    lectura                        shift and go to state 90

state 75

    (30) function -> ftype func ID agregaFunc PARIZQ funcaux PARDER . varsaux bloque
    (5) varsaux -> . vars varsaux
    (6) varsaux -> . empty
    (9) vars -> . var type vaux PYC
    (10) vars -> . empty
    (126) empty -> .
